updated for Facebook

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 	  <div class="container">
 	    <div class="row">
 		  <div class="span12">
-			<h2>Great features of your product or service</h2>
+			<h2>Host real-time tournaments seemlessly!</h2>
 		    <hr class="dashed">				
 		  </div>  
 		</div>  
@@ -192,6 +192,7 @@
       </div>
       <div class="modal-footer">
 		<button class="btn btn-primary">Bounce Me</button>
+		<button class="btn btn-primary">Register with Facebook</button>
       </div>
     </div>	
 	
@@ -219,6 +220,7 @@
       </div>
       <div class="modal-footer">
 		<button class="btn btn-primary">Log In</button>
+		<button class="btn btn-primary">Facebook</button>
       </div>
     </div>	
 
