--- a/public/about.html
+++ b/public/about.html
@@ -329,7 +329,7 @@
 	    </fieldset>
       </div>
       <div class="modal-footer">
-		<button class="btn btn-primary">Log In</button>
+		<button class="btn btn-primary">Log in</button>
       </div>
     </div>	
 
