updated index and admin controller

--- a/public/plans.html
+++ b/public/plans.html
@@ -53,10 +53,10 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="work.html">Our work</a></li>
 							<li><a href="about.html">About us</a></li>
-							<li><a href="plans.html">Pricing</a></li>
+							<li class="active"><a href="plans.html">Pricing</a></li>
 							<li><a href="explore.html">Explore</a></li>
 							<li><a href="faq.html">FAQ</a></li>
-							<li class="active"><a href="alt.html">Alt</a></li>
+							<li><a href="alt.html">Alt</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><button class="btn btn-primary">Sign In</button></li>
 						</ul>
@@ -68,84 +68,85 @@
 	<!-- Content
 	================================================== -->
 	<div id="content" class="container">
-</div>
-
-	<!-- Carousel -->	
-	<div id="carousel" class="carousel slide" rel="carousel">
-		<!-- Carousel items -->				
-		<div class="carousel-inner">
-			<div class="active item">
-				<h1 style="width:950px;position:absolute;top:20px;text-align:center;left:50%;margin-left:-480px;line-height:1.2em;font-weight:800;color:#fff;font-size:120px;">WE BUILD WEBSITES</h1>
-				<img src="img/city.jpg" />
-			</div>
+	<div class="hero-unit">
+		<div class="container">
+			<h1 class="ac">Plans and pricing!</h1><br />
+			<p class="ac">
+				This is a template for a simple pricing table.
+				Take a look at our pricing options.
+			</p>
 		</div>
-		<!-- Carousel navigation -->
-		<a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
-		<a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
 	</div>
 
-	<div class="container">
+	<!-- Example pricing -->
+	<div class="row pricing">
 
-
-		<div class="row">
-
-			<!-- portfolio item-->
-			<div class="span4 project zoom" data-tags="design">
-
-				<a class="thumbnail" href="">
-					<!-- image -->
-					<img src="http://placehold.it/300x200/222/fff" />
-					<!-- name -->
-					<b class="project-name">Title</b>
-				</a>
-			</div>
-			<!-- end portfolio item-->
-
-			<!-- portfolio item-->
-			<div class="span4 project zoom" data-tags="design">
-
-				<a class="thumbnail" href="">
-					<!-- image -->
-					<img src="http://placehold.it/300x200/555/fff" />
-					<!-- name -->
-					<b class="project-name">Title</b>
-				</a>
-			</div>
-			<!-- end portfolio item-->
-
-									<!-- portfolio item-->
-			<div class="span4 project zoom" data-tags="design">
-
-				<a class="thumbnail" href="">
-					<!-- image -->
-					<img src="http://placehold.it/300x200/999/fff" />
-					<!-- name -->
-					<b class="project-name">Title</b>
-				</a>
-			</div>
-			<!-- end portfolio item-->
-
-		</div>
-
-		<br />
-
-		<div class="row">
-			<div class="span4">
-				<h2><span class="grey">Work</span> with us</h2>
-				 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
-		 	</div>
-			<div class="span4">
-				<h2><span class="grey">Know more</span> about us</h2>
-				 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
-			</div>
-			<div class="span4">
-				<h2><span class="grey">Meet</span> us</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
+		<div class="span4">
+			<div class="well">
+				<h2>Basic</h2>
+				<ul>
+					<li>&#10004; 5 users</li>
+					<li>&#10004; 1TB of space</li>
+					<li>&#10006; Limited access</li>
+					<li>&#10006; No phone support</li>
+				</ul>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<hr />
+				<h3 class="ac">$5.99 / month</h3>
+				<hr />
+				<p class="ac">
+					<a class="btn btn-success btn-large" href="#">Select plan &raquo;</a>
+				</p>
 			</div>
 		</div>
+		<div class="span4 most-popular">
+			<div class="well">
+				<h2>Silver</h2>
+				<p><span>POPULAR</span></p>
+				<ul>
+					<li>&#10004; 20 users</li>
+					<li>&#10004; Unlimited access</li>
+					<li>&#10004; 3TB of space</li>
+					<li>&#10004; E-mail support</li>
+				</ul>          
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+				<hr />
+				<h3 class="ac">$15.99 / month</h3>
+				<hr />
+				<p class="ac">
+					<a class="btn btn-success btn-large" href="#">&#10004; Select plan</a>
+				</p>
+			</div>
+		</div>
+		<div class="span4">
+			<div class="well">
+				<h2>Gold</h2>
+				<ul>
+					<li>&#10004; Unlimited users</li>
+					<li>&#10004; Unlimited access</li>
+					<li>&#10004; 100TB of space</li>
+					<li>&#10004; Phone and e-mail support</li>
+				</ul>          
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+				<hr />
+				<h3 class="ac">$25.99 / month</h3>
+				<hr />
+				<p class="ac">
+					<a class="btn btn-success btn-large" href="#">Select plan &raquo;</a>
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<hr />
+
+	<div class="row">
+		<div class="span12">
+			<h1 class="lead">
+				<b>All plans comes with 90-day</b> money-back guarantee.
+			</h1>
+		</div>
+	</div>
 
 	</div>
 
