--- a/public/about.html
+++ b/public/about.html
@@ -1,351 +1,207 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bounce | About</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Evan Clemente">
-    <link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.css" rel="stylesheet">
-	<link href="css/fonts.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html class="not-ie" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<title>Landing page template for your project</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Page description">
+	<meta name="author" content="Your name">
 
-  <body>
+	<!-- Custom css -->
+	<link href="css/style.min.css" rel="stylesheet">
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="index.html">Bounce</a>
-          <ul class="nav pull-right">
-            <li><a href="index.html">Home</a></li>
-			<li><a href="alt.html">Alt. Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-			<li><a href="features.html">Features</a></li>
-			<li><a href="pricing.html">Pricing</a></li>
-			<li><a data-toggle="modal" href="#joinModal">Register</a></li>
-			<li><a data-toggle="modal" href="#loginModal">Login</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+	<link href="css/font-awesome/font-awesome.css" rel="stylesheet">
+	<!--[if IE 7]>
+		<link href="css/font-awesome/font-awesome-ie7.css" rel="stylesheet">
+	<![endif]-->
 
-	<div id="header">
-	  <div class="container">  
-	    <div class="row">
-		  <div class="span12">
-		    <h1>About Bounce</h1>
-		  </div>
+	<!-- Load Open sans from Google Font Directory -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/jquery-1.7.2.min.js"%3E%3C/script%3E'))</script>
+</head>
+<body>
+
+	<!-- Header
+	================================================== -->
+	<header id="header">
+
+		<!-- Navigation
+		================================================== -->
+		<div class="navbar">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<a class="brand" href="index.html">
+						<b>Your</b>Site
+					</a>
+					<div class="nav-collapse fr">
+						<ul class="nav">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="work.html">Our work</a></li>
+							<li class="active"><a href="about.html">About us</a></li>
+							<li><a href="plans.html">Pricing</a></li>
+							<li><a href="explore.html">Explore</a></li>
+							<li><a href="faq.html">FAQ</a></li>
+							<li><a href="alt.html">Alt</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							<li><button class="btn btn-primary">Sign In</button></li>
+						</ul>
+					</div><!--/.nav-collapse -->
+				</div><!-- end .container -->
+			</div><!-- end .navbar-inner -->
+		</div><!-- end .navbar -->
+
+	<!-- Content
+	================================================== -->
+	<div id="content" class="container">
+	<div class="hero-unit">
+		<div class="ac">
+			<h1>Meet our team or <a href="contact.html">visit us</a>.</h1>
 		</div>
-	  </div>
 	</div>
 
-	<div id="content">
-	  <div class="container">			
-	    <div class="row">
-		  <div class="span6">	
-			<h2>Our Mission</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu massa, consequat nec venenatis vel, vehicula in felis. Donec dapibus tortor consequat turpis fringilla rutrum. Nulla porta turpis massa. Vivamus facilisis pretium mauris, ac varius augue posuere eget. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		  </div>
-		  <div class="span6">	
-			<h2>Header</h2>
-			<p>Cras vehicula orci mauris, sed porta tellus. Phasellus id odio eget elit convallis placerat sit amet sodales quam. Mauris sit amet diam vel ligula bibendum porta eu a magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu massa, consequat nec venenatis vel, vehicula in felis. Donec dapibus tortor consequat turpis fringilla rutrum.</p>
-		  </div>		  
+	<div id="team-members">
+		
+		<div class="row">
+
+		<article class="member span4">
+			<div class="member-avatar">
+				<img alt="" class="thumbnail" src="img/member.jpg" />
+			</div>
+			<p class="member-networks">
+				<a href="#" class="icon-twitter"></a>
+				<a href="#" class="icon-linkedin"></a>
+				<a href="#" class="icon-facebook"></a>
+				<a href="#" class="icon-google-plus"></a>
+				<a href="#" class="icon-phone"></a>
+				<a href="#" class="icon-envelope"></a>
+			</p>
+			<h3 class="member-name">John Doe</h3>
+			<h4 class="member-position">Founder and CEO</h4>
+			<p class="member-bio">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+			</p>
+		</article>
+
+		<article class="member span4">
+			<div class="member-avatar">
+				<img alt="" class="thumbnail" src="img/member.jpg" />
+			</div>
+			<p class="member-networks">
+				<a href="#" class="icon-twitter"></a>
+				<a href="#" class="icon-linkedin"></a>
+				<a href="#" class="icon-github"></a>
+				<a href="#" class="icon-pinterest"></a>
+			</p>
+			<h3 class="member-name">Jane Doe</h3>
+			<h4 class="member-position">Engineer</h4>
+			<p class="member-bio">
+				Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</article>	
+
+		<article class="member span4">
+			<div class="member-avatar">
+				<img alt="" class="thumbnail" src="img/member.jpg" />
+			</div>
+			<p class="member-networks">
+				<a href="#" class="icon-facebook"></a>
+				<a href="#" class="icon-phone"></a>
+				<a href="#" class="icon-envelope"></a>
+			</p>
+			<h3 class="member-name">Jane Doe</h3>
+			<h4 class="member-position">Designer</h4>
+			<p class="member-bio">
+				Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</article>
+
 		</div>
-	    <div class="row">
-		  <div class="span4">	
-			<h2>Span4</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu massa, consequat nec venenatis vel, vehicula in felis. Donec dapibus tortor consequat turpis fringilla rutrum.</p>
-		  </div>
-		  <div class="span8">	
-			<h2>Span8</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent arcu massa, consequat nec venenatis vel, vehicula in felis. Donec dapibus tortor consequat turpis fringilla rutrum.</p>
-		  </div>		  
-		</div>
-        <div class="row">
-		  <div class="span12">
-			<h2 class="txt-middle">Our Team</h2>
-		    <hr class="dashed">				
-		  </div>  
-		</div>		
-	    <div class="row">
-		  <div class="span12">
-		  <ul class="thumbnails">
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>  
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>  
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>
-		    <li class="span3">
-			  <div class="team thumbnail">			  
-                <img alt="" src="http://placehold.it/220x180">	
-				<div class="caption">
-					<h4>John Smith</h4>
-					<span>Founder</span>
-					<ul class="unstyled">
-					  <li>
-					    <a class="facebook" href=""><i class="icon-facebook-sign"></i></a>
-					  </li>
-					  <li>
-					    <a class="twitter" href=""><i class="icon-twitter-sign"></i></a>
-					  </li>					  
-					</ul>
-				</div>
-			  </div> 
-			</li>			
-		  </ul>
-		  </div>
-		</div>		
-	  </div>
+
+	</div>
 	</div>
 
-	<div id="footer">
-	  <div class="container">
-	    <div class="row">
-		  <div class="span3">
-			<h3>Quick Links</h3>
-			<ul>
-			  <li><a href="#">Home</a></li>
-			  <li><a href="#">About Us</a></li>
-			  <li><a href="#">Features</a></li>
-			  <li><a href="#">Pricing</a></li>
-			</ul>			
-		  </div>
-		  <div class="span3">		
-			<h3>Company</h3>
-			<ul>
-			  <li><a href="#">Privacy Policy</a></li>
-			  <li><a href="#">Terms of Use</a></li>
-			  <li><a href="#">FAQ</a></li>
-			</ul>	
-		  </div>
-		  <div class="span3">
-			<h3>We're Social</h3>
-			<ul>
-			  <li><a href="#">Facebook</a></li>
-			  <li><a href="#">Twitter</a></li>
-			  <li><a href="#">Google &#43;</a></li>
-			</ul>		  
-		  </div>
-		  <div class="span3">
-			<h3>Subscribe</h3>
-			<p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>			
-		    <form>
-              <input type="text" placeholder="Your Email" name="subscribe">
-			  <button class="btn btn-primary">Subscribe</button>
-			</form>
-		  </div>		  
-		</div>	  
-      </div>	  
-    </div>	
+	<footer class="row">
+		<div class="container">
+			<div class="row">
+				<div class="span2">
+					<h3>Quick links</h3>
+					<ul>
+						<li><a href="#" title="">Home</a></li>
+						<li><a href="#" title="">Our work</a></li>
+						<li><a href="#" title="">About us</a></li>
+					</ul>
+				</div>
+				<div class="span2">
+					<br /><br />
+					<ul>
+						<li><a href="#" title="">Pricing</a></li>
+						<li><a href="#" title="">Explore</a></li>
+						<li><a href="#" title="">Contact</a></li>
+					</ul>
+				</div>
+				<div class="span4 social-networks">
+					<h3>Stay in touch</h3>
+					<p>Stay in touch on social networks</p>
+					<a href="#" title="Follow us on Facebook" class="icon-facebook"></a>
+					<a href="#" title="Follow us on Twitter" class="icon-twitter"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-google-plus"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-github"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-pinterest"></a>
+				</div>
+				<div class="span4">
+					<h3>Newsletter</h3>
+					<p>Subscribe to our monthly newsletter and be the first to know about our news and special deals!</p>
+					<form>
+						<input type="text" placeholder="Enter your E-mail" />
+						<input type="submit" class="btn" value="Ok" />
+					</form>
+				</div>
+			</div> <!-- /row -->		
+		</div> <!-- /container -->
 
-	<div id="copywrite">
-	  <div class="container">
-	    <div class="row">
-		  <div class="span12">
-		    <p>&copy; 2012 Bounce Template <span id="totop" class="pull-right">Back to Top <i class="icon-arrow-up"></i></span></p>			
-		  </div>		  
-		</div>	  
-      </div>	  
-    </div>
+	<div id="footer-extra">
+		<div class="container">
+			<div class="row">
+				<div class="span4">
+					&copy; 2010—2012 Your company
+				</div>
+				<div class="span4">
+					<i class="icon-phone"></i> &nbsp; 
+					00123 320 000 123 456
+				</div>
+				<div class="span4">
+					<i class="icon-envelope"></i> &nbsp; 
+					hello@yourcomapny.com
+				</div>
+			</div> <!-- end .row -->		
+		</div> <!-- end .container -->		
+	</div>
 
-    <div class="modal hide fade" id="joinModal">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><i class="icon-remove"></i></button>
-        <h3>Become a Bounce Member</h3>
-      </div>
-      <div class="modal-body">
-	    <fieldset>
-		  <div class="control-group">
-		    <div class="controls">
-			  <label>First Name:</label>
-			  <input class="span3" type="text" placeholder="Your First Name">
-			</div>
-		    <div class="controls">
-			  <label>Last Name:</label>
-			  <input class="span3" type="text" placeholder="Your Last Name">
-			</div>			
-		    <div class="controls">
-			  <label>Email Address:</label>
-			  <input class="span3" type="text" placeholder="Your Email">
-			</div>
-			<div class="controls">
-			  <label>Password:</label>
-			  <input class="span3" type="text" placeholder="Your Password">
-		    </div>			
-		  </div>	
-	    </fieldset>
-      </div>
-      <div class="modal-footer">
-		<button class="btn btn-primary">Bounce Me</button>
-      </div>
-    </div>	
-	
-    <div class="modal hide fade" id="loginModal">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><i class="icon-remove"></i></button>
-        <h3>Login to Bounce</h3>
-      </div>
-      <div class="modal-body">
-	    <fieldset>
-		  <div class="control-group">
-		    <div class="controls">
-			  <label>Email Address:</label>
-			  <input class="span3" type="text" placeholder="Your Email">
-			</div>
-			<div class="controls">
-			  <label>Password:</label>
-			  <input class="span3" type="text" placeholder="Your Password">
-		    </div>
-			<div class="controls">
-			  <a class="btn btn-warning lefty">Forgot Your Password?</a>  
-		    </div>			
-		  </div>	
-	    </fieldset>
-      </div>
-      <div class="modal-footer">
-		<button class="btn btn-primary">Log in</button>
-      </div>
-    </div>	
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
-    <script src="js/bootstrap.js"></script>
-	<script>
-	$(window).load(function() {
-		$("#totop").click(function () {
-			$("body, html").animate({
-				scrollTop: 0
-			}, 300);
-			return false;
-		}); 
-	});
-	</script>
-	
-  </body>
+	</footer>
+
+	<!-- Javascript
+	================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+	<script type="text/javascript" src="js/jquery.touchSwipe.js"></script>
+	<script type="text/javascript" src="js/functions.min.js"></script>
+
+</body>
 </html>
