--- a/public/contact.html
+++ b/public/contact.html
@@ -1,227 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bounce | Contact</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Evan Clemente">
-    <link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/font-awesome.css" rel="stylesheet">
-	<link href="css/fonts.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="img/ico/apple-touch-icon-57-precomposed.png">
-  </head>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--><html class="not-ie" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<title>Landing page template for your project</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Page description">
+	<meta name="author" content="Your name">
 
-  <body>
+	<!-- Custom css -->
+	<link href="css/style.min.css" rel="stylesheet">
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="index.html">Bounce</a>
-          <ul class="nav pull-right">
-            <li><a href="index.html">Home</a></li>
-			<li><a href="alt.html">Alt. Home</a></li>
-            <li><a href="about.html">About</a></li>
-			<li><a href="features.html">Features</a></li>
-			<li><a href="pricing.html">Pricing</a></li>
-			<li><a data-toggle="modal" href="#joinModal">Register</a></li>
-			<li><a data-toggle="modal" href="#loginModal">Login</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>	
-	
-	<div id="header">
-	  <div class="container">  
-	    <div class="row">
-		  <div class="span12">
-		    <h1>Contact Us</h1>
-		  </div>
+	<link href="css/font-awesome/font-awesome.css" rel="stylesheet">
+	<!--[if IE 7]>
+		<link href="css/font-awesome/font-awesome-ie7.css" rel="stylesheet">
+	<![endif]-->
+
+	<!-- Load Open sans from Google Font Directory -->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+	<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script>!window.jQuery && document.write(unescape('%3Cscript src="js/jquery-1.7.2.min.js"%3E%3C/script%3E'))</script>
+</head>
+<body>
+
+	<!-- Header
+	================================================== -->
+	<header id="header">
+
+		<!-- Navigation
+		================================================== -->
+		<div class="navbar">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<a class="brand" href="index.html">
+						<b>Your</b>Site
+					</a>
+					<div class="nav-collapse fr">
+						<ul class="nav">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="work.html">Our work</a></li>
+							<li><a href="about.html">About us</a></li>
+							<li><a href="plans.html">Pricing</a></li>
+							<li><a href="explore.html">Explore</a></li>
+							<li><a href="faq.html">FAQ</a></li>
+							<li><a href="alt.html">Alt</a></li>
+							<li class="active"><a href="contact.html">Contact</a></li>
+							<li><button class="btn btn-primary">Sign In</button></li>
+						</ul>
+					</div><!--/.nav-collapse -->
+				</div><!-- end .container -->
+			</div><!-- end .navbar-inner -->
+		</div><!-- end .navbar -->
+
+	<!-- Content
+	================================================== -->
+	<div id="content" class="container">
+</div>
+
+	<iframe width="100%" height="420" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/?ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=67.587586,135.263672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+
+	<div class="container hero-unit">
+		<div class="row">
+			<p class="span4 ac">
+				<br />
+				<a class="btn btn-large btn-primary"><b>@ Write us</b></a><br /><br />
+				<b>Company that Rocks!</b><br />1601 California Ave, Palo Alto, California · <a>Get Directions</a>
+			</p>
+			<p class="span4">
+				We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial, legal, tax and accounting, healthcare, science and media markets, powered by the world’s most trusted news organization.
+			</p>
+			<p class="span4">
+				We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial, legal, tax and accounting, healthcare, science and media markets, powered by the world’s most trusted news organization.
+			</p>
 		</div>
-	  </div>
+	</div>
 	</div>
 
-	<div id="content">
-	  <div class="container">			
-	    <div class="row">
-		  <div class="span5">
-            <h2><i class="icon-envelope"></i> Email Us</h2>		  
-	    <fieldset>
-		  <div class="control-group">
-		    <div class="controls">
-			  <input class="span5" type="text" placeholder="Your Full Name">
-			</div>
-		    <div class="controls">
-			  <input class="span5" type="text" placeholder="Your Email">
-			</div>			
-		    <div class="controls">
-			  <input class="span5" type="text" placeholder="Message Subject">
-			</div>
-			<div class="controls">
-			  <textarea class="span5" id="textarea" rows="6" placeholder="Your Message"></textarea>
-		    </div>
-		  <button class="btn btn-primary">Send Message</button>
-		  </div>	
-	    </fieldset>
-		  </div>
-		  <div class="span7">
-		    <div class="row">
-		      <div class="span3">
-		        <h2><i class="icon-map-marker"></i> Address</h2>
-		        <address>
-		          111 Some Street, Suite 100
-		          <br>
-		          San Francisco, CA 94107
-				</address>
-		      </div>
-		      <div class="span4">
-		        <h2><i class="icon-phone"></i> Phone</h2>
-		        <address>
-		          Phone: (123) 456-7890
-		          <br>
-		          Fax: (123) 456-7890 	
-				</address>
-		      </div>			  	   
-		    </div>		  
-			<div class="thumbnail">
-			  <img border="0" alt="" src="http://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=14&size=540x230&maptype=roadmap&sensor=false">
-			</div>  
-		  </div>		  
-		</div>	
-	  </div>
+	<footer class="row">
+		<div class="container">
+			<div class="row">
+				<div class="span2">
+					<h3>Quick links</h3>
+					<ul>
+						<li><a href="#" title="">Home</a></li>
+						<li><a href="#" title="">Our work</a></li>
+						<li><a href="#" title="">About us</a></li>
+					</ul>
+				</div>
+				<div class="span2">
+					<br /><br />
+					<ul>
+						<li><a href="#" title="">Pricing</a></li>
+						<li><a href="#" title="">Explore</a></li>
+						<li><a href="#" title="">Contact</a></li>
+					</ul>
+				</div>
+				<div class="span4 social-networks">
+					<h3>Stay in touch</h3>
+					<p>Stay in touch on social networks</p>
+					<a href="#" title="Follow us on Facebook" class="icon-facebook"></a>
+					<a href="#" title="Follow us on Twitter" class="icon-twitter"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-google-plus"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-github"></a>
+					<a href="#" title="Follow us on Google Plus" class="icon-pinterest"></a>
+				</div>
+				<div class="span4">
+					<h3>Newsletter</h3>
+					<p>Subscribe to our monthly newsletter and be the first to know about our news and special deals!</p>
+					<form>
+						<input type="text" placeholder="Enter your E-mail" />
+						<input type="submit" class="btn" value="Ok" />
+					</form>
+				</div>
+			</div> <!-- /row -->		
+		</div> <!-- /container -->
+
+	<div id="footer-extra">
+		<div class="container">
+			<div class="row">
+				<div class="span4">
+					&copy; 2010—2012 Your company
+				</div>
+				<div class="span4">
+					<i class="icon-phone"></i> &nbsp; 
+					00123 320 000 123 456
+				</div>
+				<div class="span4">
+					<i class="icon-envelope"></i> &nbsp; 
+					hello@yourcomapny.com
+				</div>
+			</div> <!-- end .row -->		
+		</div> <!-- end .container -->		
 	</div>
 
-	<div id="footer">
-	  <div class="container">
-	    <div class="row">
-		  <div class="span3">
-			<h3>Quick Links</h3>
-			<ul>
-			  <li><a href="#">Home</a></li>
-			  <li><a href="#">About Us</a></li>
-			  <li><a href="#">Features</a></li>
-			  <li><a href="#">Pricing</a></li>
-			</ul>			
-		  </div>
-		  <div class="span3">		
-			<h3>Company</h3>
-			<ul>
-			  <li><a href="#">Privacy Policy</a></li>
-			  <li><a href="#">Terms of Use</a></li>
-			  <li><a href="#">FAQ</a></li>
-			</ul>	
-		  </div>
-		  <div class="span3">
-			<h3>We're Social</h3>
-			<ul>
-			  <li><a href="#">Facebook</a></li>
-			  <li><a href="#">Twitter</a></li>
-			  <li><a href="#">Google &#43;</a></li>
-			</ul>		  
-		  </div>
-		  <div class="span3">
-			<h3>Subscribe</h3>
-			<p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>			
-		    <form>
-              <input type="text" placeholder="Your Email" name="subscribe">
-			  <button class="btn btn-primary">Subscribe</button>
-			</form>
-		  </div>		  
-		</div>	  
-      </div>	  
-    </div>	
 
-	<div id="copywrite">
-	  <div class="container">
-	    <div class="row">
-		  <div class="span12">
-		    <p>&copy; 2012 Bounce Template <span id="totop" class="pull-right">Back to Top <i class="icon-arrow-up"></i></span></p>			
-		  </div>		  
-		</div>	  
-      </div>	  
-    </div>
+	</footer>
 
-    <div class="modal hide fade" id="joinModal">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><i class="icon-remove"></i></button>
-        <h3>Become a Bounce Member</h3>
-      </div>
-      <div class="modal-body">
-	    <fieldset>
-		  <div class="control-group">
-		    <div class="controls">
-			  <label>First Name:</label>
-			  <input class="span3" type="text" placeholder="Your First Name">
-			</div>
-		    <div class="controls">
-			  <label>Last Name:</label>
-			  <input class="span3" type="text" placeholder="Your Last Name">
-			</div>			
-		    <div class="controls">
-			  <label>Email Address:</label>
-			  <input class="span3" type="text" placeholder="Your Email">
-			</div>
-			<div class="controls">
-			  <label>Password:</label>
-			  <input class="span3" type="text" placeholder="Your Password">
-		    </div>			
-		  </div>	
-	    </fieldset>
-      </div>
-      <div class="modal-footer">
-		<button class="btn btn-primary">Bounce Me</button>
-      </div>
-    </div>	
-	
-    <div class="modal hide fade" id="loginModal">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><i class="icon-remove"></i></button>
-        <h3>Login to Bounce</h3>
-      </div>
-      <div class="modal-body">
-	    <fieldset>
-		  <div class="control-group">
-		    <div class="controls">
-			  <label>Email Address:</label>
-			  <input class="span3" type="text" placeholder="Your Email">
-			</div>
-			<div class="controls">
-			  <label>Password:</label>
-			  <input class="span3" type="text" placeholder="Your Password">
-		    </div>
-			<div class="controls">
-			  <a class="btn btn-warning lefty">Forgot Your Password?</a>  
-		    </div>			
-		  </div>	
-	    </fieldset>
-      </div>
-      <div class="modal-footer">
-		<button class="btn btn-primary">Log In</button>
-      </div>
-    </div>	
+	<!-- Javascript
+	================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.min.js"></script>
+	<script type="text/javascript" src="js/jquery.touchSwipe.js"></script>
+	<script type="text/javascript" src="js/functions.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
-    <script src="js/bootstrap.js"></script>
-	<script>
-	$(window).load(function() {
-		$("#totop").click(function () {
-			$("body, html").animate({
-				scrollTop: 0
-			}, 300);
-			return false;
-		}); 
-	});
-	</script>
-	
-  </body>
+</body>
 </html>
