--- a/public/work.html
+++ b/public/work.html
@@ -51,12 +51,12 @@
 					<div class="nav-collapse fr">
 						<ul class="nav">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Our work</a></li>
+							<li class="active"><a href="work.html">Our work</a></li>
 							<li><a href="about.html">About us</a></li>
 							<li><a href="plans.html">Pricing</a></li>
 							<li><a href="explore.html">Explore</a></li>
 							<li><a href="faq.html">FAQ</a></li>
-							<li class="active"><a href="alt.html">Alt</a></li>
+							<li><a href="alt.html">Alt</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><button class="btn btn-primary">Sign In</button></li>
 						</ul>
@@ -68,26 +68,26 @@
 	<!-- Content
 	================================================== -->
 	<div id="content" class="container">
-</div>
-
-	<!-- Carousel -->	
-	<div id="carousel" class="carousel slide" rel="carousel">
-		<!-- Carousel items -->				
-		<div class="carousel-inner">
-			<div class="active item">
-				<h1 style="width:950px;position:absolute;top:20px;text-align:center;left:50%;margin-left:-480px;line-height:1.2em;font-weight:800;color:#fff;font-size:120px;">WE BUILD WEBSITES</h1>
-				<img src="img/city.jpg" />
-			</div>
+	<div class="hero-unit">
+		<div class="ac">
+			<h1>Meet the best of our work!</h1><br />
+			<p>This is a template for a simple portfolio page with tags.</p>
 		</div>
-		<!-- Carousel navigation -->
-		<a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
-		<a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
 	</div>
 
-	<div class="container">
+	<div id="portfolio">
 
+		<!-- portfolio filter -->		
+		<ul id="portfolio-filter" class="nav nav-tabs">
+			<li class="active"><a href="#" class="filter" data-filter="*">All</a></li>
+			<li><a href="#" class="filter" data-filter=".web">Web</a></li>
+			<li><a href="#" class="filter" data-filter=".design">Design</a></li>
+			<li><a href="#" class="filter" data-filter=".corporate">Corporate identity</a></li>
+			<li><a href="#" class="filter" data-filter=".mobile">Mobile app</a></li>
+		</ul>
 
-		<div class="row">
+		<!-- portfolio items -->		
+		<div class="row" id="portfolio-items">
 
 			<!-- portfolio item-->
 			<div class="span4 project zoom" data-tags="design">
@@ -102,51 +102,91 @@
 			<!-- end portfolio item-->
 
 			<!-- portfolio item-->
-			<div class="span4 project zoom" data-tags="design">
+			<div class="span4 project zoom" data-tags="corporate">
 
 				<a class="thumbnail" href="">
 					<!-- image -->
-					<img src="http://placehold.it/300x200/555/fff" />
+					<img src="http://placehold.it/300x200/F8F3E0/888" />
 					<!-- name -->
 					<b class="project-name">Title</b>
 				</a>
 			</div>
 			<!-- end portfolio item-->
 
-									<!-- portfolio item-->
-			<div class="span4 project zoom" data-tags="design">
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="mobile">
 
 				<a class="thumbnail" href="">
 					<!-- image -->
-					<img src="http://placehold.it/300x200/999/fff" />
+					<img src="http://placehold.it/300x200/DE765A/fff" />
 					<!-- name -->
 					<b class="project-name">Title</b>
 				</a>
 			</div>
 			<!-- end portfolio item-->
 
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="web">
+
+				<a class="thumbnail" href="">
+					<!-- image -->
+					<img src="http://placehold.it/300x200/DDDDDC/888" />
+					<!-- name -->
+					<b class="project-name">Title</b>
+				</a>
+			</div>
+			<!-- end portfolio item-->
+
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="mobile">
+
+				<a class="thumbnail" href="">
+					<!-- image -->
+					<img src="http://placehold.it/300x200/92B978/fff" />
+					<!-- name -->
+					<b class="project-name">Title</b>
+				</a>
+			</div>
+			<!-- end portfolio item-->												
+
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="corporate">
+
+				<a class="thumbnail" href="">
+					<!-- image -->
+					<img src="http://placehold.it/300x200/79B9F2/fff" />
+					<!-- name -->
+					<b class="project-name">Title</b>
+				</a>
+			</div>
+			<!-- end portfolio item-->
+
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="design">
+
+				<a class="thumbnail" href="">
+					<!-- image -->
+					<img src="http://placehold.it/300x200/FCDE89/fff" />
+					<!-- name -->
+					<b class="project-name">Title</b>
+				</a>
+			</div>
+			<!-- end portfolio item-->
+
+			<!-- portfolio item-->
+			<div class="span4 project zoom" data-tags="mobile">
+
+				<a class="thumbnail" href="">
+					<!-- image -->
+					<img src="http://placehold.it/300x200/666/fff" />
+					<!-- name -->
+					<b class="project-name">Title</b>
+				</a>
+			</div>
+			<!-- end portfolio item-->						
 		</div>
 
-		<br />
-
-		<div class="row">
-			<div class="span4">
-				<h2><span class="grey">Work</span> with us</h2>
-				 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
-		 	</div>
-			<div class="span4">
-				<h2><span class="grey">Know more</span> about us</h2>
-				 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
-			</div>
-			<div class="span4">
-				<h2><span class="grey">Meet</span> us</h2>
-				<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-				<p><a class="" href="#">Read more &raquo;</a></p>
-			</div>
-		</div>
-
+	</div>
 	</div>
 
 	<footer class="row">
